fix cube on small laptop responsive issue.

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -170,6 +170,72 @@ input[type="radio"]:checked::before {
   margin-bottom: 1em;
 }
 
+/*smaller display*/
+@media screen and (max-width: 2000px) {
+  .three-d-container {
+    width: 500px;
+    height: 500px;
+  }
+
+  /* translateZ needs to be half length of the cube side  */
+  .three-d-cube {
+    transform: translateZ(-250px);
+  }
+
+  /* creating the sides for 3-D cube */
+  .three-d-item:nth-child(1) {
+    transform: rotateY(0deg) translateZ(250px);
+  }
+
+  .three-d-item:nth-child(2) {
+    transform: rotateX(180deg) translateZ(250px);
+  }
+
+  .three-d-item:nth-child(3) {
+    transform: rotateY(90deg) translateZ(250px);
+  }
+  .three-d-item:nth-child(4) {
+    transform: rotateY(-90deg) translateZ(250px);
+  }
+
+  .three-d-item:nth-child(5) {
+    transform: rotateX(90deg) translateZ(250px);
+  }
+
+  .three-d-item:nth-child(6) {
+    transform: rotateX(-90deg) translateZ(250px);
+  }
+
+  .a:checked ~ .three-d-cube {
+    transform: translateZ(-250px) rotateY(0deg);
+  }
+
+  .b:checked ~ .three-d-cube {
+    transform: translateZ(-250px) rotateX(-180deg);
+  }
+
+  .c:checked ~ .three-d-cube {
+    transform: translateZ(-250px) rotateY(-90deg);
+  }
+
+  .d:checked ~ .three-d-cube {
+    transform: translateZ(-250px) rotateY(90deg);
+  }
+
+  .e:checked ~ .three-d-cube {
+    transform: translateZ(-250px) rotateX(-90deg);
+  }
+
+  .f:checked ~ .three-d-cube {
+    transform: translateZ(-250px) rotateX(90deg);
+  }
+
+  .three-d-bullet {
+    margin: 520px 20px 0 0;
+  }
+
+}
+
 /* Tablet */
 @media screen and (max-width: 1200px) {
   .home-container {
